force-app/main/default/objects/AgentRewardConfig__c/AgentRewardConfig__c.object-meta.xml
<CustomObject>
    <description>Stores externalized point values that admins configure per action type for the Self-Improving Agent Framework.</description>
    <label>Agent Reward Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Reward Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>