force-app/main/default/objects/AgentRewardConfig__c/fields/agent_api_name__c.field-meta.xml
<CustomField>
    <fullName>agent_api_name__c</fullName>
    <description>Agent scope (blank = shared)</description>
    <label>Agent API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>