force-app/main/default/objects/AgentRewardConfig__c/fields/is_active__c.field-meta.xml
<CustomField>
    <fullName>is_active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Toggle without deleting</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>