force-app/main/default/objects/AgentRewardConfig__c/fields/points__c.field-meta.xml
<CustomField>
    <fullName>points__c</fullName>
    <description>Positive=reward, negative=penalty</description>
    <label>Points</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>