force-app/main/default/objects/AgentRewardConfig__c/fields/topic_area__c.field-meta.xml
<CustomField>
    <fullName>topic_area__c</fullName>
    <description>Subagent scope (blank = global)</description>
    <label>Topic Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>